# lab06

./: CMakeLists.txt  CPack.cmake  CPackConfig.cmake  ChangeLog.md  README.md
.github/workflows/: Cpack.yml  actions.yml  test.sh
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
_build/formatter_ex_lib_dir/: Makefile  cmake_install.cmake
_build/formatter_ex_lib_dir/formatter_lib/: Makefile  cmake_install.cmake
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
banking/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  tests
banking/_build/gtest_build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
banking/_build/gtest_build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
banking/_build/gtest_build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/_build/formatter_lib/: Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
hello_world_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex_lib/formatter_lib/: Makefile
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
solver_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib/formatter_lib/: Makefile
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: tests.cpp
